XPower UI: ensure v-scrollbar

--- a/views/index.scss
+++ b/views/index.scss
@@ -16,6 +16,7 @@ body {
 body {
   background-color: var(--xp-dimgray);
   color: var(--xp-powered);
+  overflow-y: scroll;
 }
 body.container {
   margin-right: auto;
